--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Prettier Check 🔎
         id: prettier
         run: npx prettier . --check
+      - name: Prettier Fix _config.yml
+        run: npx prettier _config.yml --write
       - name: Create diff 📝
         # https://docs.github.com/en/actions/learn-github-actions/expressions#failure
         if: ${{ failure() }}
